--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,15 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# Editor/IDE specific
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Claude Code local settings
+.claude/settings.local.json
+
 # ESPHome Swift specific
 build/
 *.bin
