feat: migrate to pure Swift Embedded architecture
BREAKING CHANGE: Removes all C++ code generation paths

This commit completes the migration to a pure Swift Embedded architecture:
- Updated FrameworkType enum to only support swift-embedded
- Removed all references to esp-idf and arduino frameworks
- Updated configuration parser to enforce Swift Embedded only
- Simplified CLI BuildCommand to use only Swift Embedded path
- Updated README to describe pure Swift Embedded architecture
- Fixed component property handling in SwiftEmbeddedGen
- Added string extension utilities for code generation
- Updated example configuration to demonstrate Swift Embedded mode

The project now generates native Swift code that runs directly on ESP32
microcontrollers using Swift Embedded, with no C++ generation or runtime
overhead. This aligns with the project's goal of being a production-ready
replacement for ESPHome using modern Swift.

Note: Requires Swift development snapshot with Embedded support for compilation.

--- a/Examples/swift-embedded-test.yaml
+++ b/Examples/swift-embedded-test.yaml
@@ -1,5 +1,5 @@
-# Example configuration for Swift Embedded mode
-# This demonstrates the new build system architecture
+# Example configuration for ESPHome Swift
+# ESPHome Swift uses pure Swift Embedded for ESP32 firmware generation
 
 esphome_swift:
   name: "Swift Embedded Test"
@@ -8,7 +8,7 @@ esphome_swift:
 esp32:
   board: esp32-c6-devkitc-1
   framework:
-    type: swift-embedded  # New Swift Embedded mode
+    type: swift-embedded
 
 # WiFi configuration
 wifi:
